--- a/Assets/scss/style.scss
+++ b/Assets/scss/style.scss
@@ -21,10 +21,7 @@ html {
 }
 
 
-h3 {
-    color: rgb(3, 3, 3);
-}
-
+/*
 header {
     background-color: #faf4f4b4;
     display: flex;
@@ -32,13 +29,55 @@ header {
     align-items: center;
     padding: 20px;
 
-}
+}*/
 
-header div h3 {
+/*header div h3 {
     color: rgb(0, 0, 0);
     font-family: 'Amatic SC', cursive;
-}
+}*/ 
 
+header{
+
+    background-color: #faf4f4b4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+
+    nav { 
+
+        padding: 10px 0px;
+        
+        a {
+        font-weight: 600;
+        padding-right: 50px;
+        color: rgb(5, 5, 5);
+        font-family: 'Amatic SC', cursive;
+        font-size: 22px;
+        text-decoration: none;
+        &:hover{
+            color: rgba(245, 151, 11, 0.897);
+               }
+    
+    
+           }
+    
+        }
+
+
+    div{
+
+        h3{
+
+         color: rgb(0, 0, 0);
+         font-family: 'Amatic SC', cursive;
+        
+        }
+
+    }
+
+  }           
+     
 
 .logo {
     display: flex;
@@ -51,23 +90,31 @@ header div h3 {
     cursor: pointer;
 }
 
-a {
-    color: rgb(5, 5, 5);
-    font-family: 'Amatic SC', cursive;
-    font-size: 21px;
-    text-decoration:none ;
 
-}
 
-nav a {
+/*nav { 
+
+    padding: 10px 0px;
+    
+    a {
     font-weight: 600;
     padding-right: 50px;
+    color: rgb(5, 5, 5);
+    font-family: 'Amatic SC', cursive;
+    font-size: 22px;
+    text-decoration: none;
+    &:hover{
+        color: rgba(245, 151, 11, 0.897);
+    }
 
-}
 
-nav a:hover {
-    color: rgba(174, 28, 211, 0.945);
-} 
+       }
+
+}*/
+/*
+nav a:hover { color: rgba(245, 151, 11, 0.897);
+   
+}*/
 
 
 body {
@@ -96,25 +143,16 @@ body {
 
 }
 
-nav {
-    padding: 10px 0px;
-
-}
 
 .gridContainer {
     display: grid;
     gap: 10px;
-    /* grid-template-areas: 
-    "header header"
-    "section section"
-    "main  article"
-     "footer footer"; */
-
+  
     grid-template:
-        "header header" 100px 
-        "section section" 150px
-        "main  article"   auto 
-        "footer footer" 100px;
+        "header header"   100px 
+        "section section" 150px 
+        "main  article"    auto  
+        "footer footer"   100px;
 }
 
 .gridHeader {
@@ -123,33 +161,103 @@ nav {
 
 .gridSection {
     grid-area: section;
-    background-color:#faf4f4b4 ;
+    background-color: #faf4f4b4;
     text-align: center;
     color: black;
-   
+
 }
 
-.tituloIndex{
+.tituloIndex {
     font-family: 'Birthstone', cursive;
     font-size: 50px;
 
 }
 
-.parrafoIndex{
+.parrafoIndex {
     font-family: 'KoHo', sans-serif;
-    margin-left: 30px;
-    margin-right: 30px;
+    font-size: 18px;
+    padding-top: 15px;
+    padding-bottom: 20px;
 }
 
 
-.gridMain {
+.gridMainIndex {
     grid-area: main;
+}  
+   
+/*.gridMainIndex{
+    width: 100%;
+    max-width: 300px;
+    margin: 100px auto;
+    position: relative;
+    display: flex;
+    align-items: center;
+     }
+
+ .gridMainIndex:hover img{
+
+    filter: blur(1.5px);
+    transition: all .3s;
+    transform: scale(1.5);
+    transition: all .3s;
+ }*/
+
+ /*.gridMainIndex::before{
+
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    transition: all .3s;
+    top: 0;
+    left: 0;
+ }
+
+ .gridMainIndex:hover::before{
+    background:rgba(42, 25, 49, 0.301);
+    z-index: 2;
+    transition: all .3s;
+ }*/
+
+    /*img {
+        width: 100%;
+        height: 100%;
+        transition: all .3s;
+
+    }*/
+
+    /*.textIndexMain {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        position: absolute;
+        color: #fff;
+        padding: 10px 20px;
+        z-index: 3;
+        flex-direction: column;
+         }
+     
+    .tituloMainIndex, .parrafoMainIndex {
+        margin: 10px;
+        padding: 5px;
+
+    }     
+
+    .tituloMainIndex{
+        position: absolute;
+        right: 100%;
+    }
+
+    .gridMainIndex:hover .tituloMainIndex{
+        left: 0%;
+    }*/
+
     
-}
+
 
 .gridArticleDer {
     grid-area: article;
-    
+
 }
 
 .gridFooter {
@@ -169,18 +277,13 @@ nav {
     .gridContainer {
         display: grid;
         gap: 10px;
-        /* grid-template-areas: 
-        "header"
-        "section"
-        "main"
-        "article"
-         "footer"; */
+        
         grid-template:
-         "header"  auto
-         "section" auto 
-         "main"    auto 
-         "article" auto 
-         "footer"  auto;
+            "header"  auto 
+            "section" auto 
+            "main"    auto 
+            "article" auto 
+            "footer"  auto;
 
 
     }
@@ -234,17 +337,10 @@ nav {
     object-fit: cover;
 }
 
-
-
 .gridContainerGalery {
     display: grid;
     gap: 10px;
-    /* grid-template-areas: 
-    "header header"
-    "section section"
-    "main  article"
-     "footer footer"; */
-
+    
     grid-template:
         "header" 100px 
         "main"   auto 
@@ -261,7 +357,7 @@ nav {
     .gridContainerGalery {
         display: grid;
         gap: 10px;
-    
+
         grid-template:
             "header" auto 
             "main"   auto 
@@ -269,59 +365,54 @@ nav {
 
 
     }
-    }
+}
 
-    /*html PERSONALIZADOS*/
+/*html PERSONALIZADOS*/
 
-    .gridMainPersonalizados{
-        grid-area: main;
-        background-color: rgba(22, 87, 172, 0.144);
-    }
+.gridMainPersonalizados {
+    grid-area: main;
+    background-color: rgba(22, 87, 172, 0.144);
+}
 
-    .gridContainerPersonalizados{
-        display: grid;
-        gap: 10px;
-        grid-template:
-            "header" 100px 
-            "main"    auto 
-            "footer" 100px;
-    }
+.gridContainerPersonalizados {
+    display: grid;
+    gap: 10px;
+    grid-template:
+        "header" 100px 
+        "main"   auto 
+        "footer" 100px;
+}
 
 
 @media (max-width: 699px) {
     .gridContainerPersonalizados {
         display: grid;
         gap: 10px;
-        /* grid-template-areas: 
-        "header"
-        "section"
-        "main"
-        "article"
-         "footer"; */
+        
         grid-template:
             "header" auto 
             "main" auto 
             "footer" auto;
 
-        }
- }
-
-     /*html CONTACTO*/
-
-     .gridMainContacto{
-        grid-area: main;
-        background-color: rgba(235, 38, 130, 0.144);
     }
+}
 
-    .gridContainerContacto {
-        display: grid;
-        gap: 10px;
-        grid-template:
+/*html CONTACTO*/
 
-         "header"  100px 
-         "main"     auto 
-         "footer"  100px;
-    }
+.gridMainContacto {
+    grid-area: main;
+    background-color: rgba(235, 38, 130, 0.144);
+}
+
+.gridContainerContacto {
+    display: grid;
+    gap: 10px;
+    grid-template:
+
+        "header" 100px 
+        "main"   auto 
+        "footer" 100px;
+}
 
 
 
@@ -329,23 +420,18 @@ nav {
     .gridContainerContacto {
         display: grid;
         gap: 10px;
-        /* grid-template-areas: 
-        "header"
-        "section"
-        "main"
-        "article"
-         "footer"; */
+       
         grid-template:
             "header" auto 
-            "main" auto 
+            "main"   auto 
             "footer" auto;
 
-        }
- }
+    }
+}
 
-  /*html POST*/
+/*html POST*/
 
-  .gridMainPost{
+.gridMainPost {
     grid-area: main;
     background-color: rgba(22, 87, 172, 0.144);
 }
@@ -355,27 +441,48 @@ nav {
     gap: 10px;
     grid-template:
 
-     "header"  100px 
-     "main"     auto 
-     "footer"  100px;
+        "header" 100px 
+        "main"    auto 
+        "footer" 100px;
 }
 
 
 @media (max-width: 699px) {
-.gridContainerPost {
-    display: grid;
-    gap: 10px;
-    /* grid-template-areas: 
+    .gridContainerPost {
+        display: grid;
+        gap: 10px;
+        /* grid-template-areas: 
     "header"
     "section"
     "main"
     "article"
      "footer"; */
-    grid-template:
-        "header" auto 
-        "main" auto 
-        "footer" auto;
+        grid-template:
+            "header" auto 
+            "main" auto 
+            "footer" auto;
 
     }
 }
 
+/*tarjetas viejas*/
+/* .cardProduct{ 
+        width: 250px;
+
+        
+    }
+      
+    .cardProduct__img{
+        width: 100%;
+    
+    }
+    
+    .cardProduct__description__price{
+        margin-top: 10px;
+    }
+    
+    .cardProduct__description__text{
+ 
+    text-align: justify;
+    line-height: 20px;
+    } */
