--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -2,6 +2,49 @@
 @import url("https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Roboto:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Beau+Rivage&family=Birthstone&family=Grape+Nuts&family=KoHo:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Beau+Rivage&family=Birthstone&family=Grape+Nuts&family=KoHo:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Beau+Rivage&family=Birthstone&family=Grape+Nuts&family=KoHo:wght@200&display=swap");
+.buttons, .botonIn {
+  min-width: 700px;
+  display: flex;
+  justify-content: space-around; }
+  .buttons a, .botonIn a {
+    text-decoration: none;
+    font-size: 28px;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    background: #314652;
+    color: #f1f1f1;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    transition: all .4s ease-in-out; }
+    .buttons a:hover, .botonIn a:hover {
+      transform: scale(1.2);
+      background-color: deeppink; }
+
+.botonIn {
+  justify-content: end;
+  padding-right: 30px; }
+  .botonIn a {
+    background: #be6fadd5; }
+    .botonIn a:hover {
+      background-color: #1fe9bd; }
+
+.letrasParrafos {
+  font-size: 18px;
+  font-size: 100; }
+
+.letrasGrandes {
+  font-size: 22px;
+  font-size: 100; }
+
+#botonFacebook {
+  background-color: #4c00ff; }
+
+#botonYoutube {
+  background-color: #dd1a44; }
+
 * {
   font-family: 'Roboto', sans-serif;
   padding: 0px;
@@ -50,11 +93,10 @@ header {
 .logo {
   display: flex;
   align-items: center; }
-
-.logo img {
-  height: 180px;
-  margin-right: 15px;
-  cursor: pointer; }
+  .logo img {
+    height: 180px;
+    margin-right: 15px;
+    cursor: pointer; }
 
 /*nav { 
 
@@ -111,7 +153,7 @@ body {
 
 .tituloIndex {
   font-family: 'Birthstone', cursive;
-  font-size: 50px; }
+  font-size: 40px; }
 
 .parrafoIndex {
   font-family: 'KoHo', sans-serif;
@@ -295,32 +337,4 @@ body {
   .gridContainerPost {
     display: grid;
     gap: 10px;
-    /* grid-template-areas: 
-    "header"
-    "section"
-    "main"
-    "article"
-     "footer"; */
     grid-template: "header" auto  "main" auto  "footer" auto; } }
-
-/*tarjetas viejas*/
-/* .cardProduct{ 
-        width: 250px;
-
-        
-    }
-      
-    .cardProduct__img{
-        width: 100%;
-    
-    }
-    
-    .cardProduct__description__price{
-        margin-top: 10px;
-    }
-    
-    .cardProduct__description__text{
- 
-    text-align: justify;
-    line-height: 20px;
-    } */
