--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -4,17 +4,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Beau+Rivage&family=Birthstone&family=Grape+Nuts&family=KoHo:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Beau+Rivage&family=Birthstone&family=Grape+Nuts&family=KoHo:wght@200&display=swap");
 .buttons, .botonIn {
+  padding-top: 20px;
   min-width: 700px;
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-evenly; }
   .buttons a, .botonIn a {
     text-decoration: none;
-    font-size: 28px;
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
     text-align: center;
-    background: #314652;
+    background: #753394;
     color: #f1f1f1;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
@@ -25,7 +26,7 @@
 
 .botonIn {
   justify-content: end;
-  padding-right: 30px; }
+  padding-right: 40px; }
   .botonIn a {
     background: #be6fadd5; }
     .botonIn a:hover {
@@ -56,19 +57,6 @@
 html {
   height: 100%; }
 
-/*
-header {
-    background-color: #faf4f4b4;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-
-}*/
-/*header div h3 {
-    color: rgb(0, 0, 0);
-    font-family: 'Amatic SC', cursive;
-}*/
 header {
   background-color: #faf4f4b4;
   display: flex;
@@ -98,29 +86,6 @@ header {
     margin-right: 15px;
     cursor: pointer; }
 
-/*nav { 
-
-    padding: 10px 0px;
-    
-    a {
-    font-weight: 600;
-    padding-right: 50px;
-    color: rgb(5, 5, 5);
-    font-family: 'Amatic SC', cursive;
-    font-size: 22px;
-    text-decoration: none;
-    &:hover{
-        color: rgba(245, 151, 11, 0.897);
-    }
-
-
-       }
-
-}*/
-/*
-nav a:hover { color: rgba(245, 151, 11, 0.897);
-   
-}*/
 body {
   background-image: url(./../Img/index2.webp);
   background-repeat: no-repeat;
@@ -140,7 +105,7 @@ body {
 .gridContainer {
   display: grid;
   gap: 10px;
-  grid-template: "header header"   100px  "section section" 150px  "main  article"    auto   "footer footer"   100px; }
+  grid-template: "header header"   100px  "section section" 150px  "main  article"    auto   "footer footer"   130px; }
 
 .gridHeader {
   grid-area: header; }
@@ -164,69 +129,6 @@ body {
 .gridMainIndex {
   grid-area: main; }
 
-/*.gridMainIndex{
-    width: 100%;
-    max-width: 300px;
-    margin: 100px auto;
-    position: relative;
-    display: flex;
-    align-items: center;
-     }
-
- .gridMainIndex:hover img{
-
-    filter: blur(1.5px);
-    transition: all .3s;
-    transform: scale(1.5);
-    transition: all .3s;
- }*/
-/*.gridMainIndex::before{
-
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100px;
-    transition: all .3s;
-    top: 0;
-    left: 0;
- }
-
- .gridMainIndex:hover::before{
-    background:rgba(42, 25, 49, 0.301);
-    z-index: 2;
-    transition: all .3s;
- }*/
-/*img {
-        width: 100%;
-        height: 100%;
-        transition: all .3s;
-
-    }*/
-/*.textIndexMain {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        position: absolute;
-        color: #fff;
-        padding: 10px 20px;
-        z-index: 3;
-        flex-direction: column;
-         }
-     
-    .tituloMainIndex, .parrafoMainIndex {
-        margin: 10px;
-        padding: 5px;
-
-    }     
-
-    .tituloMainIndex{
-        position: absolute;
-        right: 100%;
-    }
-
-    .gridMainIndex:hover .tituloMainIndex{
-        left: 0%;
-    }*/
 .gridArticleDer {
   grid-area: article; }
 
@@ -234,7 +136,8 @@ body {
   grid-area: footer;
   background-color: #faf4f48f;
   text-align: center;
-  color: black; }
+  color: black;
+  bottom: 0; }
 
 @media (max-width: 699px) {
   .gridContainer {
@@ -279,7 +182,7 @@ body {
 .gridContainerGalery {
   display: grid;
   gap: 10px;
-  grid-template: "header" 100px  "main"   auto  "footer" 100px; }
+  grid-template: "header" 100px  "main"   auto  "footer" 150px; }
 
 .gridMainGalery {
   grid-area: main;
@@ -299,7 +202,7 @@ body {
 .gridContainerPersonalizados {
   display: grid;
   gap: 10px;
-  grid-template: "header" 100px  "main"   auto  "footer" 100px; }
+  grid-template: "header" 100px  "main"   auto  "footer" 150px; }
 
 @media (max-width: 699px) {
   .gridContainerPersonalizados {
@@ -315,7 +218,7 @@ body {
 .gridContainerContacto {
   display: grid;
   gap: 10px;
-  grid-template: "header" 100px  "main"   auto  "footer" 100px; }
+  grid-template: "header" 100px  "main"   auto  "footer" 150px; }
 
 @media (max-width: 699px) {
   .gridContainerContacto {
@@ -331,7 +234,7 @@ body {
 .gridContainerPost {
   display: grid;
   gap: 10px;
-  grid-template: "header" 100px  "main"    auto  "footer" 100px; }
+  grid-template: "header" 100px  "main"    auto  "footer" 150px; }
 
 @media (max-width: 699px) {
   .gridContainerPost {
