--- a/Assets/scss/_maps.scss
+++ b/Assets/scss/_maps.scss
@@ -1,4 +1,4 @@
-$redes: (
+/*$redes: (
     youtube: rgb(221, 26, 68),
     facebook: rgb(76, 0, 255),
     
@@ -10,4 +10,4 @@ $redes: (
 
 #botonYoutube{
     background-color: map-get($map: $redes, $key:youtube);
-}
+}*/
